# django-slack-logging

./: Jenkinsfile  LICENSE  README.md  setup.cfg  setup.py
ms_teams_logging/: __init__.py
slack_logging/: __init__.py
