[metadata]
name = django-slack-logging
version = 1.0.0
author = Travis Bock
author_email = tbock@innovateteam.com
description = Logging to slack channel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Innovate-Inc/django-slack-logging
project_urls =
    Bug Tracker = https://github.com/Innovate-Inc/django-slack-logging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = slack_logging
python_requires = >=3.7
install_requires=
    requests
